[package]
name = "packet"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
pnet = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
